fix: 修改运行脚本

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,4 +13,9 @@ dependencies = [
     "python-multipart>=0.0.6",
     "tomli>=2.0.0",
     "tomli-w>=1.0.0",
+    "webdavclient3>=3.14.6",
 ]
+
+[[tool.uv.index]]
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+default = true
